--- a/cadastro-produtos/storage/app/.gitignore
+++ b/cadastro-produtos/storage/app/.gitignore
@@ -1,3 +1,16 @@
-*
-!public/
-!.gitignore
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.example
+.env.backup
+nohup.out
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+*.log
+nohup.out
